chore(observations): fix scrollbars on map

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -46,23 +46,19 @@ button.close {
 }
 
 .section-observations-map {
-  height: calc(100vh - 55px);
   .leaflet-pane {
     mix-blend-mode: normal;
   }
   .leaflet-top {
     margin-top: 55px;
   }
-}
-
-.section-observations-map {
   z-index: 10;
   position: absolute !important;
   left: 0;
   right: 0;
   bottom: 0;
   top: 0px;
-  height: calc(100vh - 55px);
+  height: calc(100vh - 70px);
   width: 100vw;
   overflow: hidden;
   padding: 0;
@@ -70,8 +66,8 @@ button.close {
 
 .section-map {
   position: relative;
-  overflow: hidden;
-  height: calc(100vh - 55px);
+  width: 100%;
+  height: 100%;
 }
 
 .section-observations-filter {
@@ -80,7 +76,6 @@ button.close {
   top: 0;
   left: 0;
   right: 0;
-  width: 100vw;
   background-color: rgb(0,0,0,0.2);
   margin: 0;
 }
